{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 48,
  "lineage": "2019c6b1-ab85-837a-bcc4-42df995d740e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-086f0f1c17fab2a01",
            "association_id": "eipassoc-0dbc167cf17e24a40",
            "domain": "vpc",
            "id": "eipalloc-086f0f1c17fab2a01",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-015e530cfd0c1831e",
            "private_dns": "ip-10-204-1-40.eu-central-1.compute.internal",
            "private_ip": "10.204.1.40",
            "public_dns": "ec2-52-58-166-187.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.58.166.187",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:143805577160:internet-gateway/igw-00494e282b83213ec",
            "id": "igw-00494e282b83213ec",
            "owner_id": "143805577160",
            "tags": {
              "Name": "msk-ig"
            },
            "tags_all": {
              "Name": "msk-ig"
            },
            "vpc_id": "vpc-0ee138daee4a43cf5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-086f0f1c17fab2a01",
            "association_id": "eipassoc-0dbc167cf17e24a40",
            "connectivity_type": "public",
            "id": "nat-0f128d8be8df019d8",
            "network_interface_id": "eni-015e530cfd0c1831e",
            "private_ip": "10.204.1.40",
            "public_ip": "52.58.166.187",
            "subnet_id": "subnet-052f9fc037af608ac",
            "tags": {
              "Name": "msk-nat"
            },
            "tags_all": {
              "Name": "msk-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:143805577160:route-table/rtb-03f1aee634f15a7cf",
            "id": "rtb-03f1aee634f15a7cf",
            "owner_id": "143805577160",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00494e282b83213ec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ee138daee4a43cf5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bab6e1ba3b8e2ada",
            "route_table_id": "rtb-03f1aee634f15a7cf",
            "subnet_id": "subnet-052f9fc037af608ac"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public_route",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0678e5d289aeff2",
            "route_table_id": "rtb-03f1aee634f15a7cf",
            "subnet_id": "subnet-0d9f23735bb42be05"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public_route",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001291fe6d89c6c0e",
            "route_table_id": "rtb-03f1aee634f15a7cf",
            "subnet_id": "subnet-08895ad248e162cdb"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public_route",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:143805577160:security-group/sg-0a5c83cb95a83734a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.204.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0a5c83cb95a83734a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.204.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-20230710084609135700000001",
            "name_prefix": "terraform-",
            "owner_id": "143805577160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "msk",
              "ClusterName": "mskcluster",
              "Name": "msk-sg"
            },
            "tags_all": {
              "Application": "msk",
              "ClusterName": "mskcluster",
              "Name": "msk-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee138daee4a43cf5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1794861918",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a5c83cb95a83734a",
            "security_group_rule_id": "sgr-03ccd05bd90979139",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.204.0.0/16"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3235039326",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a5c83cb95a83734a",
            "security_group_rule_id": "sgr-0136a51113a0d32ed",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.204.0.0/16"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4157528648",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a5c83cb95a83734a",
            "security_group_rule_id": "sgr-09a0c4c562b94e1d0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:143805577160:subnet/subnet-052f9fc037af608ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.204.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052f9fc037af608ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "143805577160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "msk-eu-central-1a-public-subnet"
            },
            "tags_all": {
              "Name": "msk-eu-central-1a-public-subnet"
            },
            "vpc_id": "vpc-0ee138daee4a43cf5"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:143805577160:subnet/subnet-0d9f23735bb42be05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.204.2.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9f23735bb42be05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "143805577160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "msk-eu-central-1b-public-subnet"
            },
            "tags_all": {
              "Name": "msk-eu-central-1b-public-subnet"
            },
            "vpc_id": "vpc-0ee138daee4a43cf5"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:143805577160:subnet/subnet-08895ad248e162cdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.204.3.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08895ad248e162cdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "143805577160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "msk-eu-central-1c-public-subnet"
            },
            "tags_all": {
              "Name": "msk-eu-central-1c-public-subnet"
            },
            "vpc_id": "vpc-0ee138daee4a43cf5"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:143805577160:vpc/vpc-0ee138daee4a43cf5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.204.0.0/16",
            "default_network_acl_id": "acl-0ea10187f87826393",
            "default_route_table_id": "rtb-062de7b56c9f637b9",
            "default_security_group_id": "sg-03c968facf9ea30aa",
            "dhcp_options_id": "dopt-07089ebd37cce23c1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ee138daee4a43cf5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062de7b56c9f637b9",
            "owner_id": "143805577160",
            "tags": {
              "Name": "msk"
            },
            "tags_all": {
              "Name": "msk"
            }
          }
        }
      ]
    }
  ]
}